syntax = "proto3";

package io.harness.pms.plan;

option java_multiple_files = true;

message GraphLayoutNode {
  string nodeType = 1;
  string nodeIdentifier = 2;
  string nodeUUID = 3;
  EdgeLayoutList edgeLayoutList = 4;
}

message EdgeLayoutList {
  repeated string currentNodeChildren = 1;
  repeated string nextIds = 2;
}